LinKreta_POC_Repository/force-app/main/default/objects/Enquiry_Expertise__c/Enquiry_Expertise__c.object-meta.xml
<CustomObject>
    <description>This is a junction object of &quot;Expertise Master&quot; and &quot;Enquiry&quot;.</description>
    <label>Enquiry Expertise</label>
    <nameField>
        <label>Enquiry Expertise Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Enquiry Expertise</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>