LinKreta_POC_Repository/force-app/main/default/objects/Enquiry_Expertise__c/fields/BU_Leader__c.field-meta.xml
<CustomField>
    <fullName>BU_Leader__c</fullName>
    <formula>Expertise_Master__r.BUL__r.FirstName + &apos; &apos; + Expertise_Master__r.BUL__r.LastName</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>BU Leader</label>
    <type>Text</type>
</CustomField>