LinKreta_POC_Repository/force-app/main/default/objects/Enquiry_Expertise__c/fields/BU_Name__c.field-meta.xml
<CustomField>
    <fullName>BU_Name__c</fullName>
    <formula>Expertise_Master__r.BU_Name__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>BU Name</label>
    <type>Text</type>
</CustomField>