LinKreta_POC_Repository/force-app/main/default/objects/Enquiry_Expertise__c/fields/Ecosystem_and_Offering_Leader__c.field-meta.xml
<CustomField>
    <fullName>Ecosystem_and_Offering_Leader__c</fullName>
    <formula>Expertise_Master__r.Ecosystems_and_Offering_leader__r.FirstName + &apos; &apos; +  Expertise_Master__r.Ecosystems_and_Offering_leader__r.LastName</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Ecosystem and Offering Leader</label>
    <type>Text</type>
</CustomField>