LinKreta_POC_Repository/force-app/main/default/objects/Enquiry_Expertise__c/fields/Efficiency_and_Results_Leader__c.field-meta.xml
<CustomField>
    <fullName>Efficiency_and_Results_Leader__c</fullName>
    <formula>Expertise_Master__r.Efficiency_and_Results_Leader__r.FirstName +  &apos; &apos; + Expertise_Master__r.Efficiency_and_Results_Leader__r.LastName</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Efficiency and Results Leader</label>
    <type>Text</type>
</CustomField>