LinKreta_POC_Repository/force-app/main/default/objects/Enquiry_Expertise__c/fields/Enquiry__c.field-meta.xml
<CustomField>
    <fullName>Enquiry__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Enquiry</label>
    <referenceTo>Lead</referenceTo>
    <relationshipName>Enquiry_Expertise_Line_Items</relationshipName>
    <type>Lookup</type>
</CustomField>