LinKreta_POC_Repository/force-app/main/default/objects/Enquiry_Expertise__c/fields/Enquiry_Name__c.field-meta.xml
<CustomField>
    <fullName>Enquiry_Name__c</fullName>
    <formula>Enquiry__r.FirstName + &apos; &apos; +  Enquiry__r.LastName</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Enquiry Name</label>
    <type>Text</type>
</CustomField>