LinKreta_POC_Repository/force-app/main/default/objects/Enquiry_Expertise__c/fields/Expertise_Master__c.field-meta.xml
<CustomField>
    <fullName>Expertise_Master__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Expertise Master</label>
    <referenceTo>ExpertiseMaster__c</referenceTo>
    <relationshipName>Enquiry_Expertise_Line_Items</relationshipName>
    <type>Lookup</type>
</CustomField>